--- a/package.xml
+++ b/package.xml
@@ -18,6 +18,7 @@
   <build_depend>message_filters</build_depend>
   <build_depend>diagnostic_msgs</build_depend>
   <build_depend>diagnostic_updater</build_depend>
+  <build_depend>rosbag</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>rosconsole</run_depend>
@@ -28,6 +29,7 @@
   <run_depend>message_filters</run_depend>
   <run_depend>diagnostic_msgs</run_depend>
   <run_depend>diagnostic_updater</run_depend>
+  <run_depend>rosbag</run_depend>
 
   <export>
     <nodelet plugin="${prefix}/plugins/nodelet_plugins.xml" />
